// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular dependency 1`] = `
"Not all files could be compiled due to circular dependency


        All files: [
  \\"conduit_a.cdt\\",
  \\"conduit_b.cdt\\"
]


        Resolved: []
        "
`;

exports[`dependency multi file 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_d.proto": "
syntax=\\"proto2\\";
        import \\"sub/conduit_c.proto\\";

        
        
message D {
	required m2 d = 1;
}
        ",
  "sub/conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
  "sub/conduit_c.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";
import \\"sub/conduit_b.proto\\";

        
        
message m2 {
	required m1 m1 = 1;
	required m2 m2 = 2;
}
        ",
}
`;

exports[`function declaration 1`] = `
Object {
  "conduit_a.function": "
        [
  {
    \\"kind\\": \\"Function\\",
    \\"loc\\": {
      \\"startColNumber\\": 0,
      \\"startLineNumber\\": 0,
      \\"endColNumber\\": 25,
      \\"endLineNumber\\": 1
    },
    \\"name\\": \\"letsGetFuncy\\",
    \\"part\\": {
      \\"ParameterList\\": {
        \\"kind\\": \\"ParameterList\\",
        \\"loc\\": {
          \\"startColNumber\\": 25,
          \\"startLineNumber\\": 1,
          \\"endColNumber\\": 26,
          \\"endLineNumber\\": 1
        },
        \\"children\\": {
          \\"Parameter\\": [
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"a\\",
              \\"loc\\": {
                \\"startColNumber\\": 26,
                \\"startLineNumber\\": 1,
                \\"endColNumber\\": 29,
                \\"endLineNumber\\": 1
              },
              \\"part\\": {
                \\"CustomType\\": {
                  \\"kind\\": \\"CustomType\\",
                  \\"loc\\": {
                    \\"startColNumber\\": 29,
                    \\"startLineNumber\\": 1,
                    \\"endColNumber\\": 37,
                    \\"endLineNumber\\": 1
                  },
                  \\"type\\": \\"SomeType\\"
                }
              }
            },
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"b\\",
              \\"loc\\": {
                \\"startColNumber\\": 38,
                \\"startLineNumber\\": 1,
                \\"endColNumber\\": 42,
                \\"endLineNumber\\": 1
              },
              \\"part\\": {
                \\"CustomType\\": {
                  \\"kind\\": \\"CustomType\\",
                  \\"loc\\": {
                    \\"startColNumber\\": 42,
                    \\"startLineNumber\\": 1,
                    \\"endColNumber\\": 54,
                    \\"endLineNumber\\": 1
                  },
                  \\"from\\": \\"Foreign\\",
                  \\"type\\": \\"Type\\"
                }
              }
            }
          ]
        }
      },
      \\"ReturnTypeSpec\\": {
        \\"kind\\": \\"ReturnTypeSpec\\"
      },
      \\"FunctionBody\\": {
        \\"kind\\": \\"FunctionBody\\",
        \\"loc\\": {
          \\"startColNumber\\": 56,
          \\"startLineNumber\\": 1,
          \\"endColNumber\\": 57,
          \\"endLineNumber\\": 1
        },
        \\"children\\": {
          \\"Statement\\": []
        }
      }
    }
  },
  {
    \\"kind\\": \\"Function\\",
    \\"loc\\": {
      \\"startColNumber\\": 5,
      \\"startLineNumber\\": 3,
      \\"endColNumber\\": 21,
      \\"endLineNumber\\": 5
    },
    \\"name\\": \\"boogaloo\\",
    \\"part\\": {
      \\"ParameterList\\": {
        \\"kind\\": \\"ParameterList\\",
        \\"loc\\": {
          \\"startColNumber\\": 21,
          \\"startLineNumber\\": 5,
          \\"endColNumber\\": 22,
          \\"endLineNumber\\": 5
        },
        \\"children\\": {
          \\"Parameter\\": [
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"a\\",
              \\"loc\\": {
                \\"startColNumber\\": 22,
                \\"startLineNumber\\": 5,
                \\"endColNumber\\": 25,
                \\"endLineNumber\\": 5
              },
              \\"part\\": {
                \\"CustomType\\": {
                  \\"kind\\": \\"CustomType\\",
                  \\"loc\\": {
                    \\"startColNumber\\": 25,
                    \\"startLineNumber\\": 5,
                    \\"endColNumber\\": 33,
                    \\"endLineNumber\\": 5
                  },
                  \\"type\\": \\"SomeType\\"
                }
              }
            },
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"b\\",
              \\"loc\\": {
                \\"startColNumber\\": 34,
                \\"startLineNumber\\": 5,
                \\"endColNumber\\": 38,
                \\"endLineNumber\\": 5
              },
              \\"part\\": {
                \\"CustomType\\": {
                  \\"kind\\": \\"CustomType\\",
                  \\"loc\\": {
                    \\"startColNumber\\": 38,
                    \\"startLineNumber\\": 5,
                    \\"endColNumber\\": 50,
                    \\"endLineNumber\\": 5
                  },
                  \\"from\\": \\"Foreign\\",
                  \\"type\\": \\"Type\\"
                }
              }
            }
          ]
        }
      },
      \\"ReturnTypeSpec\\": {
        \\"kind\\": \\"ReturnTypeSpec\\"
      },
      \\"FunctionBody\\": {
        \\"kind\\": \\"FunctionBody\\",
        \\"loc\\": {
          \\"startColNumber\\": 61,
          \\"startLineNumber\\": 5,
          \\"endColNumber\\": 62,
          \\"endLineNumber\\": 5
        },
        \\"children\\": {
          \\"Statement\\": []
        }
      }
    }
  }
]
        ",
}
`;

exports[`function with return 1`] = `
Object {
  "conduit_a.function": "
        [
  {
    \\"kind\\": \\"Function\\",
    \\"loc\\": {
      \\"startColNumber\\": 0,
      \\"startLineNumber\\": 0,
      \\"endColNumber\\": 17,
      \\"endLineNumber\\": 1
    },
    \\"name\\": \\"funk\\",
    \\"part\\": {
      \\"ParameterList\\": {
        \\"kind\\": \\"ParameterList\\",
        \\"loc\\": {
          \\"startColNumber\\": 17,
          \\"startLineNumber\\": 1,
          \\"endColNumber\\": 18,
          \\"endLineNumber\\": 1
        },
        \\"children\\": {
          \\"Parameter\\": [
            {
              \\"kind\\": \\"Parameter\\",
              \\"name\\": \\"a\\",
              \\"loc\\": {
                \\"startColNumber\\": 18,
                \\"startLineNumber\\": 1,
                \\"endColNumber\\": 21,
                \\"endLineNumber\\": 1
              },
              \\"part\\": {
                \\"CustomType\\": {
                  \\"kind\\": \\"CustomType\\",
                  \\"loc\\": {
                    \\"startColNumber\\": 21,
                    \\"startLineNumber\\": 1,
                    \\"endColNumber\\": 29,
                    \\"endLineNumber\\": 1
                  },
                  \\"type\\": \\"SomeType\\"
                }
              }
            }
          ]
        }
      },
      \\"ReturnTypeSpec\\": {
        \\"kind\\": \\"ReturnTypeSpec\\"
      },
      \\"FunctionBody\\": {
        \\"kind\\": \\"FunctionBody\\",
        \\"loc\\": {
          \\"startColNumber\\": 31,
          \\"startLineNumber\\": 1,
          \\"endColNumber\\": 32,
          \\"endLineNumber\\": 1
        },
        \\"children\\": {
          \\"Statement\\": [
            {
              \\"kind\\": \\"Statement\\"
            }
          ]
        }
      }
    }
  }
]
        ",
}
`;

exports[`simple multi file 1`] = `
Object {
  "conduit_a.proto": "
syntax=\\"proto2\\";
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
syntax=\\"proto2\\";
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required double d = 1;
}


message m1 {
	required m2 m = 1;
}
        ",
}
`;

exports[`subdir isn't referenced in present dir 1`] = `"Cannot find imported file conduit_c.cdt from file conduit_b.cdt"`;
